fix: use ordinary input type to fix input field issues on IE

--- a/src/component/ZiltagForm/index.css
+++ b/src/component/ZiltagForm/index.css
@@ -46,6 +46,7 @@
 .ziltag-ziltag-form input {
   display: block;
   width: 195px;
+  padding-left: 30px;
   line-height: 30px;
   border: 0;
   outline: 0;
@@ -55,8 +56,8 @@
   font-size: 12px;
 }
 
-.ziltag-ziltag-form input[type='name'] {
-  background: 0 50% url(username.png) no-repeat;
+.ziltag-ziltag-form input[type='text'] {
+  background: 0 50% url(name.png) no-repeat;
 }
 
 .ziltag-ziltag-form input[type='email'] {
@@ -65,12 +66,6 @@
 
 .ziltag-ziltag-form input[type='password'] {
   background: 0 50% url(password.png) no-repeat;
-}
-
-.ziltag-ziltag-form input[type='name'],
-.ziltag-ziltag-form input[type='email'],
-.ziltag-ziltag-form input[type='password'] {
-  padding-left: 30px;
 }
 
 .ziltag-ziltag-form nav {
